--- a/05IntefacesAvanzadas/app/src/main/res/layout/activity_main.xml
+++ b/05IntefacesAvanzadas/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,87 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity">|
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:columnCount="4"
+            android:orientation="horizontal"
+            android:layout_margin="2dp">
+            <TextView
+                android:id="@+id/output_screen"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_columnSpan="4"
+                android:layout_rowSpan="1"
+                android:text="0"
+                android:gravity="right"
+                android:textAlignment="gravity"
+                />
+            <Button android:text="C"
+                android:id="@+id/sym_c"
+                android:layout_margin="2dp"/>
+            <Button android:text="/"
+                android:id="@+id/sym_division"
+                android:layout_margin="2dp"/>
+            <Button android:text="*"
+                android:id="@+id/sym_multiplication"
+                android:layout_margin="2dp"/>
+            <Button android:text="-"
+                android:id="@+id/sym_minus"
+                android:layout_margin="2dp"/>
+            <Button android:text="+"
+                android:id="@+id/sym_plus"
+                android:layout_margin="2dp"
+                android:layout_columnSpan="1"
+                android:layout_rowSpan="2"
+                android:layout_gravity="fill"/>
+            <Button android:text="7"
+                android:id="@+id/num_7"
+                android:layout_margin="2dp"/>
+            <Button android:text="8"
+                android:id="@+id/num_8"
+                android:layout_margin="2dp"/>
+            <Button android:text="9"
+                android:id="@+id/num_9"
+                android:layout_margin="2dp"/>
+            <Button android:text="4"
+                android:id="@+id/num_4"
+                android:layout_margin="2dp"/>
+            <Button android:text="5"
+                android:id="@+id/num_5"
+                android:layout_margin="2dp"/>
+            <Button android:text="6"
+                android:id="@+id/num_6"
+                android:layout_margin="2dp"/>
+            <Button android:text="="
+                android:id="@+id/sym_equal"
+                android:layout_margin="2dp"
+            android:layout_columnSpan="1"
+            android:layout_rowSpan="2"
+            android:layout_gravity="fill"/>
+            <Button android:text="1"
+                android:id="@+id/num_1"
+                android:layout_margin="2dp"/>
+            <Button android:text="2"
+                android:id="@+id/num_2"
+                android:layout_margin="2dp"/>
+            <Button android:text="3"
+                android:id="@+id/num_3"
+                android:layout_margin="2dp"/>
+            <Button android:text="0"
+                android:id="@+id/num_0"
+                android:layout_margin="2dp"
+                android:layout_columnSpan="2"
+                android:layout_gravity="fill"/>
+            <Button android:text="."
+                android:id="@+id/sym_dot"
+                android:layout_margin="2dp"/>
+        </GridLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
