--- a/03ActivityIntent/app/src/main/res/layout/activity_main.xml
+++ b/03ActivityIntent/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,63 @@
     tools:context=".MainActivity">
 
 
-    <Button
-        android:id="@+id/about_buttom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Launch About Activity"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/about_buttom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Launch About Activity"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <Button
+            android:id="@+id/camera_buttom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Launch Camera"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <Button
+            android:id="@+id/contact_buttom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Launch Contacts"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <Button
+            android:id="@+id/phone_buttom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Launch Phone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <Button
+            android:id="@+id/message_buttom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Launch Messages"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
 
 
 
