--- a/07MapsGps/app/src/debug/res/values/google_maps_api.xml
+++ b/07MapsGps/app/src/debug/res/values/google_maps_api.xml
@@ -3,5 +3,5 @@
     TODO: Before you run your application, you need a Google Maps API key.
 
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCYZmdxBFyH1WdqOPJNx6aDWy00pMj-chs</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">-chs</string>
 </resources>
